# hisab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
crates/ganit-ai/: Cargo.toml
crates/ganit-calc/: Cargo.toml
crates/ganit-core/: Cargo.toml
crates/ganit-geo/: Cargo.toml
crates/ganit-geo/src/: lib.rs
crates/ganit-num/: Cargo.toml
docs/: benchmarks-rust-v-cyrius.md  doc-health.md  roadmap.md
docs/architecture/: math.md  overview.md
docs/audit/: 2026-04-15.md  2026-05-29-cga-arc-closeout.md  2026-05-29.md  2026-05-30.md
docs/development/: dependency-watch.md  port-audit.md  roadmap.md  threat-model.md  tool-issues.md
docs/guides/: testing.md
examples/: basic_math.cyr  basic_math.rs
lib/: agnosys.cyr  autodiff.cyr  calc.cyr  calc_ext.cyr  collision_core.cyr  collision_full.bak  collision_mesh.cyr  color.cyr  complex.cyr  diffgeo.cyr  einsum.cyr  error.cyr  f64_util.cyr  ganita.cyr  geo.cyr  geo_advanced.cyr  interval.cyr  lie.cyr  lie_ext.cyr  linalg_ext.cyr  linalg_precision.cyr  mabda.cyr  mat3.cyr  mat4.cyr  noise_simplex.cyr  num.cyr  num_ext.cyr  ode.cyr  optimize.cyr  patra.cyr  quat.cyr  sakshi.cyr  sigil.cyr  spatial.cyr  symbolic.cyr  symbolic_ext.cyr  syscalls_x86_64_agnos.cyr  tensor.cyr  transforms.cyr  vec2.cyr  (+3 more)
rust-old/: Cargo.toml  bench-history.csv  benchmarks.md
rust-old/benches/: benchmarks.rs
rust-old/examples/: basic_math.rs
rust-old/src/: ai.rs  autodiff.rs  interval.rs  lib.rs  logging.rs
scripts/: bench-history.sh  version-bump.sh
src/: ai.rs  autodiff.cyr  autodiff.rs  calc.cyr  calc.rs  calc_ext.cyr  collision_core.cyr  collision_mesh.cyr  color.cyr  complex.cyr  diffgeo.cyr  einsum.cyr  error.cyr  error.rs  f64_util.cyr  geo.cyr  geo.rs  geo_advanced.cyr  interval.cyr  lib.rs  lie.cyr  lie_ext.cyr  linalg_ext.cyr  linalg_precision.cyr  logging.rs  main.cyr  mat3.cyr  mat4.cyr  num.cyr  num.rs  num_ext.cyr  ode.cyr  optimize.cyr  parallel.rs  quat.cyr  spatial.cyr  symbolic.cyr  symbolic.rs  symbolic_ext.cyr  tensor.cyr  (+6 more)
src/calc/: core.rs  diffgeo.rs  easing.rs  integration.rs  mod.rs  multivar.rs  noise.rs  splines.rs
src/geo/: cga.rs  closest.rs  collision.rs  delaunay.rs  intersection.rs  mod.rs  primitives.rs  sdf.rs  spatial.rs
src/num/: complex.rs  complex_linalg.rs  eigen.rs  fft.rs  inertia.rs  linalg.rs  mod.rs  ode.rs  optimize.rs  rng.rs  solvers.rs  sparse.rs  stability.rs
src/symbolic/: bridge.rs  latex.rs  mod.rs  simplify_rules.rs
src/tensor/: dense.rs  indexed.rs  sparse.rs  (+1 more)
tests/: edge_cases.tcyr  foundation.tcyr  hisab.bcyr  hisab.fcyr  hisab.tcyr  integration.rs  modules.tcyr
(+56 files in other folders)
