[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Internal
ganit-core = { path = "crates/ganit-core" }
ganit-geo = { path = "crates/ganit-geo" }
ganit-calc = { path = "crates/ganit-calc" }
ganit-num = { path = "crates/ganit-num" }
ganit-ai = { path = "crates/ganit-ai" }
