[package]
name = "ganit"
version = "0.22.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Higher mathematics library — linear algebra, geometry, calculus, and numerical methods for Rust"
homepage = "https://github.com/MacCracken/ganit"
repository = "https://github.com/MacCracken/ganit"
readme = "README.md"
documentation = "https://docs.rs/ganit"
keywords = ["math", "geometry", "calculus", "linear-algebra", "numerical"]
categories = ["mathematics", "science"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["transforms", "geo", "calc", "num"]
transforms = []
geo = []
calc = []
num = []
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["transforms", "geo", "calc", "num", "ai", "logging"]

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "basic_math"
required-features = ["transforms", "geo", "calc", "num"]

[[test]]
name = "integration"
required-features = ["transforms", "geo", "calc", "num"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["transforms", "geo", "calc", "num"]
