[package]
name = "ganit-geo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Geometric primitives: rays, planes, AABBs, spheres, intersections"

[dependencies]
ganit-core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
